# tabbedmux

./: .clang-format  .gitignore  meson.build  tmux_ssh.vala
build-aux/: compile_schemas.sh
